# ChangeLog for dev-libs/qjson
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/qjson/ChangeLog,v 1.34 2013/04/02 20:56:14 ago Exp $

  02 Apr 2013; Agostino Sarubbo <ago@gentoo.org> qjson-0.8.1.ebuild:
  Stable for ppc64, wrt bug #462890

  02 Mar 2013; Markos Chandras <hwoarang@gentoo.org> qjson-0.8.1.ebuild:
  Move Qt dependencies to the new category

  11 Feb 2013; Davide Pesavento <pesa@gentoo.org> -qjson-0.7.1-r1.ebuild,
  qjson-0.8.1.ebuild:
  Remove old.

  10 Feb 2013; Agostino Sarubbo <ago@gentoo.org> qjson-0.8.1.ebuild:
  Stable for ppc, wrt bug #455366

  08 Feb 2013; Jeroen Roovers <jer@gentoo.org> qjson-0.8.1.ebuild:
  Stable for HPPA (bug #455366).

  06 Feb 2013; Naohiro Aota <naota@gentoo.org> qjson-0.7.1-r1.ebuild:
  Add ~x86-fbsd wrt bug #430072

  06 Feb 2013; Agostino Sarubbo <ago@gentoo.org> qjson-0.8.1.ebuild:
  Stable for x86, wrt bug #455366

  06 Feb 2013; Agostino Sarubbo <ago@gentoo.org> qjson-0.8.1.ebuild:
  Stable for amd64, wrt bug #455366

  06 Feb 2013; Davide Pesavento <pesa@gentoo.org> -qjson-0.7.1_p20121016.ebuild,
  metadata.xml:
  old

*qjson-0.8.1 (05 Dec 2012)

  05 Dec 2012; Michael Palimaka <kensington@gentoo.org> +qjson-0.8.1.ebuild,
  metadata.xml:
  Version bump wrt bug #444636. Update upstream metadata.

  16 Oct 2012; Michael Palimaka <kensington@gentoo.org>
  qjson-0.7.1_p20121016.ebuild:
  Fix SRC_URI.

*qjson-0.7.1_p20121016 (16 Oct 2012)

  16 Oct 2012; Michael Palimaka <kensington@gentoo.org>
  +qjson-0.7.1_p20121016.ebuild, metadata.xml:
  Add snapshot to fix a serialization problem, wrt bug #428256. Add upstream
  metadata.

  17 May 2012; Alexis Ballier <aballier@gentoo.org> qjson-0.7.1-r1.ebuild:
  keyword ~amd64-fbsd

  07 Feb 2012; Johannes Huber <johu@gentoo.org> -files/qjson-quint64.patch,
  -qjson-0.6.3-r1.ebuild, -qjson-0.6.3.ebuild:
  Remove old.

  07 Feb 2012; Jeroen Roovers <jer@gentoo.org> qjson-0.7.1-r1.ebuild: