@@ -2,23 +2,25 @@
 Hash: SHA256
 
 DIST qjson-0.8.1.tar.bz2 64398 SHA256 cd4db5b956247c4991a9c3e95512da257cd2a6bd011357e363d02300afc814d9 SHA512 03e65bbdf6d397f77319867a03377deb419eac46ad91bc06abb7bc68d8f8f2e490db87d909ce51e065f22e5d201f1f73d57f72e14bc378580dbf40b855f1bc72 WHIRLPOOL 532245b3eaaed901bbf44c1d005b002b010b2b7568142fe1435521e4ed24cb52f76accea9f2a324ed19183c62c2f8bfb0c0a257bf808795fc25faa132766ac32
+EBUILD qjson-0.8.1-r1.ebuild 1201 SHA256 ec47bf2fd2b5d1b422ff4bbda26532e475879c511f541bf7b5f5ce1f9c50d39e SHA512 87b95704e5a1f7d8109595bd895cd8fb507da929feb18da9075545980518a9e990cc1ac9831596259385494b3714ac4b0b6d0e313bf62599045cc8c624be19fe WHIRLPOOL e0b57ae4ac9a7fe0109368853cdc8efff6ef03108ee40a29298363d4e6f2c9e4605f16ff13d3f6c7ab3c02b5a9b83ce17b644c288de3afc712f32755ceff2fb8
 EBUILD qjson-0.8.1.ebuild 923 SHA256 e2cc26490a490b32db253215b4a6261ce54ed8cf88c6994f2e9b22468b23e552 SHA512 39bc6a60b16769f06235ecded2027b0dcb8b225af28683f90b33250c808f327a2f96a13214792d294384aa3f95b14024c78b1261f5ea83c50a360c3f419e7dd7 WHIRLPOOL dd944ad2fc86255d9b9eecabd8b94f288f7e9c3fd0ce35020e7d9c02e211ce38c0d8857ad5d4695f715f02028352260fddf066fc73f38aa86281d82f7ef7d855
-MISC ChangeLog 4368 SHA256 b4fcc855b3686185f3f187e6c877a95abce744b6370b03da91f92af1e2758ee8 SHA512 477c291a91c5640345174cff283ecb24bccef389892f97820d147b71d73ffec48a2ff6fa18660b259eb2de7b48f5f5ebbf250938b0625a77c3d69ee7bb3b467b WHIRLPOOL fbbbb844bb8fc66682eb4043c506323e2c39bde4ef35adc44d6538eb2a46c79b649c3464fb167272133d1b49d229fa9dfaa616a2cad368934ab5d7e96c4228ef
+MISC ChangeLog 4551 SHA256 b81d8b7f96ccd6a50a97fc3d705b118ecd070739247daec680e7bb2b776f6bea SHA512 6fd437be87ea9a44df7750486362139e50baf6f97e3bbaf13a83321f86984082bd0a02e496033d08f8080206e0f843af95965dcae5eeea2d4cd671dcb8197253 WHIRLPOOL d14c0bafc88605061bbb7a94315afe36f9706da2e532e363391ce7120561113454db6f7535d2d6111e5003bb90e2dead603c4dc43a18901c4bc39c33f74a7546
 MISC metadata.xml 293 SHA256 f5a96735959979ed756f4a8da8245c5cfecc1e62d95b3322798ca4af01e8b9f2 SHA512 99e1df8688dbffb037acb768caa5f333451b1dfc10f753a6b04f297c171361aa9d487f9fb5a440433cc17db88bee352bec3860e3769c47fa67eddb869a70674e WHIRLPOOL 937f07a80ac0e5f8bdc1adbf5f19dba6482b6303d85c1f120fea1f2b21ec837ce3eb046aabade5cccd003ac04075b2e3399d47dc8af7628d5906d9ebb2de2340
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0
 
-iQIcBAEBCAAGBQJRW0XxAAoJELp701BxlEWfPq0QAJUrELpMFpOIhltRyo14afai
-IApgZFShzFTssYmnPFhfHWOyJoSVXaYZ6w7l5uv0Ek1INcOxqO4+TkePz92z7cnk
-QX3HVWCUDUrzWQQEJuF+LCaG0laPPpHLbVvJZc/j3fKDthmc1uHSbjRaNgeHlIVz
-wYcSGylZU42wo+HZhDMlLic1ogA2aRVjSfnub2EO6Ky40stByYhC68EG6SE7KaCm
-CKHWzaJWEAW7fVdoZb0JIj9Mu2cVfacKwoWMfbMMB8SA5PU9CRTNtvqQ5L/kajg2
-mqkdzD3pe4AFK+gf8LISk2SYG2qvQBxcfERXRMiJQ3GqvS9axxRcH6O8GwkE/unX
-4h8MXOypb6IR8gBH4TTgYCbB1WrNuNNvMdOWyQrcLNXce6+qjCN/0MnMR5UL1jmQ
-/Q/cbIY0JVY3Qlu9mcdNwbc7nIMfeZUUxQaRAlxoV8ibN0n/FhnAwePiBIJSeF5y
-0D26MftMYQkLSZaRQsWWxBGb7VZAXnZPeWZBGM+yjoi4O7kspbOUNUbzzjc9xmoy
-yll4gyx8fOGxzfwh+7rPMS3DgFFCQPdwdaj+Zfefrnshmywtb5Me8d/b0Kqrzft4
-FUNfWG0FcK8kpZ66+A7m1+wA0CggvHcsPAqBaRDqmJNNMYEiyvSjlButwF+UyItY
-e/1qOLmtZ4mnUp4c1Wv7
-=JOTy
+iQJiBAEBCABMBQJU7w0DRRSAAAAAABQAKGlzc3Vlci1mcHJAbm90YXRpb25zOTc5
+MTY5NkQ3RDM3NkRBN0U5QjZGMTUwMDZCMUYzOERDQTQ1QTFFQwAKCRAGsfONykWh
+7Oc4EAC6x3pIUfCaZG1yHk6f8eLkOQtzRGeKEqFMNsENzMfd4jBOnO/MEWBxfp7J
+DNxcO6/X7udQyMtMFno4w2o+watxudC8vpI5R0T9mue/ICZdAkmsZ/gxKNZYq7TO
+mZ5V4RvhuciRjpuV1ABBdeXmUYyF1KkbCjL1POrV+wv4ntaOouP4koSqaQHAfxrA
+fWEFhy44BQphCdmz7D4SztJ9/5Ks2zCikS9vtrOikqLkTBPUt/bRTNztEeN/DMZh
+pMHDGNLLq0j7aPEBBEq9ee9GLGVkzKPN77X51jTnvwvRYdBrmqomAVDryEZC9/nt
+/u72rbWuAKOqjQK8ESxlm8yKhP8zzrrM2yJTzyT0R6ZNN+XjT/c5fzT0+Ii7eotS
+FhHcwJvXObic/yfcmRhlGVPolUz3FyBy0S0dig8kPTpI2ik2kPgddin46CUa5cHt
+rrgUHc/jp6azHaNbta+R1hSnWBJIe84er9798ZK2ecRMJSs0k0iR7pEe6wvGPpcZ
+tERdERCF7wUGVBvCftvS2pzw7fnaDZxdzXen+DR0n5gLf/x7/iNHV6v1s3/ZQ1KH
+BB6O46dtOerC2rcn9AUB/Xe5XQVHU2dCLhlMvKi4eXlf4KOyCRBQCrWC+4fixteA
+RdilxAMc7GI7nQ44+MSnrOEfTvonTgsZ6mtcjU6V0cRXfeeoWg==
+=1aPY
 -----END PGP SIGNATURE-----
