@@ -1,6 +1,11 @@
 # ChangeLog for dev-libs/qjson
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/qjson/ChangeLog,v 1.34 2013/04/02 20:56:14 ago Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/qjson/ChangeLog,v 1.35 2015/02/26 12:09:23 kensington Exp $
+
+*qjson-0.8.1-r1 (26 Feb 2015)
+
+  26 Feb 2015; Michael Palimaka <kensington@gentoo.org> +qjson-0.8.1-r1.ebuild:
+  Add multilib support by Karol Herbst <gentoo@karolherbst.de>.
 
   02 Apr 2013; Agostino Sarubbo <ago@gentoo.org> qjson-0.8.1.ebuild:
   Stable for ppc64, wrt bug #462890
